--- a/src/main/java/vista/Informes.fxml
+++ b/src/main/java/vista/Informes.fxml
@@ -18,7 +18,7 @@
             <RowConstraints vgrow="NEVER" />
          </rowConstraints>
          <children>
-            <VBox>
+            <VBox GridPane.columnSpan="2147483647">
                <children>
                   <GridPane BorderPane.alignment="CENTER">
                     <columnConstraints>
@@ -63,18 +63,18 @@
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Label>
+                        <TextField promptText="Ingrese el nombre del informe" GridPane.columnIndex="1" />
                         <Label text="Descripción" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Label>
                         <TextField promptText="Ingrese la descripción del informe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField promptText="Ingrese el nombre del informe" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
                </children>
             </VBox>
-            <GridPane GridPane.rowIndex="1">
+            <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
               </columnConstraints>
@@ -115,140 +115,129 @@
                   <Insets top="10.0" />
                </GridPane.margin>
             </GridPane>
-            <GridPane GridPane.rowIndex="2">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" />
-                  <ColumnConstraints hgrow="SOMETIMES" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
+            <GridPane minHeight="-Infinity" prefHeight="200.0" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <GridPane minHeight="-Infinity" prefHeight="200.0">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Duplicar">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ordenar" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Subir" GridPane.columnIndex="3">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Bajar" GridPane.columnIndex="4">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <TableView prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Columna" />
+                      <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Nombre" />
+                        <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Visible" />
+                        <TableColumn prefWidth="75.0" text="Ordenar" />
+                        <TableColumn prefWidth="75.0" text="Filtro" />
+                        <TableColumn prefWidth="75.0" text="Cálculo" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <GridPane.margin>
+                        <Insets top="5.0" />
+                     </GridPane.margin>
+                  </TableView>
+               </children>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </HBox.margin>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </GridPane>
+            <GridPane minHeight="-Infinity" prefHeight="200.0" styleClass="filter-pane" GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" />
+               </HBox.margin>
+               <children>
+                  <Label text="Nombre">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField minWidth="-Infinity" prefWidth="200.0" promptText="Ingrese un nombre para la columna" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
+                  <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Filtro" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <TextField minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                  <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver" GridPane.columnIndex="1">
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Aplicar">
                            <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
+                              <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Duplicar">
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Limpiar" GridPane.columnIndex="1">
                            <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Subir" GridPane.columnIndex="3">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Bajar" GridPane.columnIndex="4">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <TableView prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
-                          <columns>
-                            <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Columna" />
-                            <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Nombre" />
-                              <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Visible" />
-                              <TableColumn prefWidth="75.0" text="Ordenar" />
-                              <TableColumn prefWidth="75.0" text="Filtro" />
-                              <TableColumn prefWidth="75.0" text="Cálculo" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                           <GridPane.margin>
-                              <Insets top="5.0" />
-                           </GridPane.margin>
-                        </TableView>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ordenar" GridPane.columnIndex="2">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
+                              <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
                      </children>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" />
-                     </HBox.margin>
-                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </GridPane.margin>
-                  </GridPane>
-                  <GridPane minHeight="-Infinity" prefHeight="200.0" styleClass="filter-pane" GridPane.columnIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" />
-                     </HBox.margin>
-                     <children>
-                        <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Filtro" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </ComboBox>
-                        <Label text="Nombre">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Label>
-                        <TextField minWidth="-Infinity" prefWidth="200.0" promptText="Ingrese un nombre para la columna" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
-                        <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </ComboBox>
-                        <TextField minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                        <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Aplicar">
-                                 <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </GridPane.margin>
-                              </Button>
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Limpiar" GridPane.columnIndex="1">
-                                 <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </GridPane.margin>
-                              </Button>
-                           </children>
-                        </GridPane>
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </GridPane.margin>
                   </GridPane>
                </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
             </GridPane>
          </children>
       </GridPane>
