--- a/src/main/java/vista/Usuarios.fxml
+++ b/src/main/java/vista/Usuarios.fxml
@@ -36,7 +36,7 @@
                      </GridPane.margin>
                   </Label>
                   <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
-                  <Label text="Nombre" GridPane.columnIndex="2">
+                  <Label text="Apellido y nombre" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -59,7 +59,7 @@
                      </GridPane.margin>
                   </Label>
                   <PasswordField promptText="Ingrese la contraseña" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="Confirmar" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                  <Label text="Confirmar" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
