--- a/src/main/java/vista/BusquedaCargoDocente.fxml
+++ b/src/main/java/vista/BusquedaCargoDocente.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<GridPane prefHeight="300.0" prefWidth="600.0" stylesheets="@Style.css" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane hgap="10.0" prefHeight="300.0" prefWidth="600.0" stylesheets="@Style.css" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
@@ -15,44 +15,51 @@
    <rowConstraints>
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
       <RowConstraints minHeight="-Infinity" prefHeight="200.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <TextField promptText="Ingrese el criterio de búsqueda" GridPane.columnSpan="2147483647">
+      <TextField promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
          <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets />
          </GridPane.margin>
       </TextField>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
-         </GridPane.margin>
-      </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
-         </GridPane.margin>
-      </Button>
       <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
         <columns>
-          <TableColumn prefWidth="75.0" text="Columna 1" />
-          <TableColumn prefWidth="75.0" text="Columna 2" />
+          <TableColumn maxWidth="2000.0" prefWidth="75.0" text="Legajo" />
+          <TableColumn prefWidth="75.0" text="Apellido y nombre" />
+            <TableColumn maxWidth="2000.0" prefWidth="75.0" text="Área" />
+            <TableColumn prefWidth="75.0" text="Cargo" />
         </columns>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
          <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets />
          </GridPane.margin>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar cargo" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo cargo" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
    </children>
    <padding>
-      <Insets bottom="10.0" top="10.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </GridPane>
